# usb-power-osd

./: .gitignore  .gitmodules  .releaserc.json  Application.cpp  Application.h  BLEDeviceEnumerator.cpp  BLEDeviceEnumerator.h  BLEDriver.h  CHANGELOG.md  CMakeLists.txt  CommThread.cpp  CommThread.h  DeviceSelectionDialog.cpp  DeviceSelectionDialog.h  Events.cpp  Events.h  GraphPanel.cpp  GraphPanel.h  Info.plist  Info.plist.in  JsonParser.cpp  JsonParser.h  LICENSE  MeasurementEvent.cpp  MeasurementEvent.h  OsdSettings.cpp  OsdSettings.h  PowerDelivery.cpp  PowerDelivery.h  README.md  SelectedDevice.cpp  SelectedDevice.h  SerialDriver.cpp  SerialDriver.h  SerialPortEnumerator.cpp  SerialPortEnumerator.h  SerialThread.cpp  SerialThread.h  SettingsDialog.cpp  SettingsDialog.h  (+13 more)
.github/workflows/: build.yml  release.yml
